# University

./: README.md
ComputerGraphics/CourseWork_ParticleSystem/: README.md
ComputerGraphics/CourseWork_ParticleSystem/src/: 3DObject.cpp  3DObject.h  App.cpp  App.h  AppWnd.cpp  AppWnd.h  Camera.cpp  Camera.h  Chair.cpp  Chair.h  CourseWork.cpp  CourseWork.h  CourseWork.rc  CourseWorkApp.cpp  CourseWorkApp.h  CourseWorkParticleSystem.sln  CourseWorkParticleSystem.vcxproj  CourseWorkParticleSystem.vcxproj.filters  InfoText.h  Mesh.cpp  Mesh.h  Mesh3DObject.cpp  Mesh3DObject.h  Particle.cpp  Particle.h  ParticleFountain.cpp  ParticleFountain.h  ParticleSystem.cpp  ParticleSystem.h  Room.cpp  Room.h  Table.cpp  Table.h  Teapot.cpp  Teapot.h  Text.h  Utils.h  W32Exception.h  Wnd.cpp  Wnd.h  (+3 more)
ComputerGraphics/CourseWork_ParticleSystem/src/assets/: Water.tga  chair.x
ComputerGraphics/Lab1_MatrixTransforms/: README.md
ComputerGraphics/Lab1_MatrixTransforms/src/: 3DEngine.h  Lab1.cpp  Lab1MatrixTransforms.sln  Lab1MatrixTransforms.vcxproj  Lab1MatrixTransforms.vcxproj.filters  Matrix4.h  Vector4.h
Unix/Lab_FileSystem/: BitArray.cpp  BitArray.h  CMakeLists.txt  CMakePresets.json  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystem.sln  FileSystem.vcxproj  FileSystem.vcxproj.filters  INode.h  README.md  SuperBlock.h  Utils.cpp  Utils.h  main.cpp
